--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A ChatGPT Clone made by Anas Dew"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://kit.fontawesome.com/3ea9fd76e3.css" crossorigin="anonymous">
     <script defer src="https://kit.fontawesome.com/3ea9fd76e3.js" crossorigin="anonymous"></script>
-    <title>Neural Mind AI</title>
+    <title>CloneGPT</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
