chat tones and commands

--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,11 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#217b82" />
-  <meta name="description" content="A ChatGPT Clone made by Anas Dew." />
+  <meta name="description" content="Dewchat is an AI Chatbot that is made for fun, knowledge, casual chat and a lot more you can imagine. Made by Anas Dew (Anas Raza)" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>CloneGPT - A ChatGPT Clone by Anas Dew</title>
+  <title>Dewchat - Your AI Friend</title>
 </head>
 
 <body>
